[project]
name = "bEpic_ImageViewer"
description = "bEpic Image Viewer - floating image viewer for ComfyUI."
authors = [ "Sebastian Zilius"]  

version = "0.1.0"
license = "Polyform Noncommercial" 
classifiers = [
    "Operating System :: Microsoft :: Windows"
]

dependencies = ["psutil", "nvidia-ml-py"]

[project.urls]
Repository = "https://github.com/szprivate/ComfyUI-ImageViewer"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/szprivate/ComfyUI-ImageViewer/docs"

[tool.comfy]
PublisherId = "sebastianzilius"
DisplayName = "ComfyUI-ImageViewer"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility